[gd_scene load_steps=17 format=3 uid="uid://db68hv73lc5v3"]

[ext_resource type="Script" path="res://scenes/stats_scene/stats_scene.gd" id="1_7rgjh"]
[ext_resource type="Texture2D" uid="uid://tso54yg1v1h5" path="res://assets/ski_01.png" id="1_f8m8j"]
[ext_resource type="Theme" uid="uid://t4fnqfcts68g" path="res://assets/theme.tres" id="1_tuuey"]
[ext_resource type="Texture2D" uid="uid://bdh6nvf8asyhq" path="res://assets/ski_02.png" id="2_x25fh"]
[ext_resource type="PackedScene" uid="uid://c6350tcnthofh" path="res://scenes/stats_scene/stats_title.tscn" id="5_00c1i"]
[ext_resource type="PackedScene" uid="uid://cnqeoqxisixkt" path="res://scenes/stats_scene/stats_number.tscn" id="5_it5o2"]
[ext_resource type="PackedScene" uid="uid://bwx0xblbbojg6" path="res://effects/shake_effect.tscn" id="7_f17px"]
[ext_resource type="PackedScene" uid="uid://dx1cc3bi8pjqc" path="res://ui/button.tscn" id="7_pluhc"]
[ext_resource type="PackedScene" uid="uid://c817v2wc4m8jh" path="res://effects/sound_effect.tscn" id="8_ms0k7"]
[ext_resource type="AudioStream" uid="uid://cq8fxtf84winb" path="res://assets/sounds/stats_shake.wav" id="9_7mx6g"]
[ext_resource type="AudioStream" uid="uid://ma4uajanoyiq" path="res://assets/sounds/stats_shake_02.wav" id="10_re2mn"]

[sub_resource type="Animation" id="Animation_k5g02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ski02:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(404, 161)]
}

[sub_resource type="Animation" id="Animation_dg3y4"]
resource_name = "idle"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ski02:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1.56917, 1.46409, 1),
"update": 0,
"values": [Vector2(404, 161), Vector2(600, 161), Vector2(404, 161)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7vul6"]
_data = {
"RESET": SubResource("Animation_k5g02"),
"idle": SubResource("Animation_dg3y4")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_knwrq"]
resource_local_to_scene = true
noise_type = 0
seed = 3
frequency = 0.029
fractal_octaves = 1
fractal_lacunarity = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ropkh"]
resource_local_to_scene = true
noise_type = 0
seed = 3
frequency = 0.029
fractal_octaves = 1
fractal_lacunarity = 1.0

[node name="StatsScene" type="Node2D"]
rotation = -0.00209449
script = ExtResource("1_7rgjh")
label_paths = Array[NodePath]([NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TimeStatsLine/StatsTitle"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/EarlyBumpsStatsLine/StatsTitle"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/LateBumpsStatsLine/StatsTitle"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/PerfectBumpsStatsLine/StatsTitle"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/BallBouncesStatsLine/StatsTitle"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/Score/StatsTitle"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TotalScore/StatsTitle")])
number_paths = Array[NodePath]([NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TimeStatsLine/StatsTimeNumber"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/EarlyBumpsStatsLine/StatsEarlyBumpsNumber"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/LateBumpsStatsLine/StatsLateBumpsNumber"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/PerfectBumpsStatsLine/StatsPerfectBumpsNumber"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/BallBouncesStatsLine/StatsBouncesNumber"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/Score/StatsScoreNumber"), NodePath("CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TotalScore/StatsTotalScoreNumber")])

[node name="Background" type="Node2D" parent="."]

[node name="Ski01" type="Sprite2D" parent="Background"]
position = Vector2(384, 1323)
rotation = 3.14159
scale = Vector2(1, 1.39564)
texture = ExtResource("1_f8m8j")

[node name="Ski02" type="Sprite2D" parent="Background"]
position = Vector2(404, 161)
texture = ExtResource("2_x25fh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_7vul6")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2

[node name="Title" type="MarginContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer"]
modulate = Color(0.929412, 0.403922, 0.054902, 1)
layout_mode = 2

[node name="StatsTitle" type="Label" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Title"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_tuuey")
theme_override_font_sizes/font_size = 200
text = "Stage Clear"
horizontal_alignment = 1

[node name="Body" type="MarginContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer"]
modulate = Color(0.2, 0.203922, 0.203922, 1)
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body"]
layout_mode = 2

[node name="TimeStatsLine" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TimeStatsLine" instance=ExtResource("5_00c1i")]
layout_mode = 2

[node name="StatsTimeNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TimeStatsLine" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
stats_property = "time"

[node name="AnimateNumberEffect" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TimeStatsLine/StatsTimeNumber/Effects" index="0"]
time_format = true

[node name="EarlyBumpsStatsLine" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/EarlyBumpsStatsLine" instance=ExtResource("5_00c1i")]
layout_mode = 2
text = "Early Bumps"

[node name="StatsEarlyBumpsNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/EarlyBumpsStatsLine" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
stats_property = "bumps_early"

[node name="LateBumpsStatsLine" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/LateBumpsStatsLine" instance=ExtResource("5_00c1i")]
layout_mode = 2
text = "Late Bumps"

[node name="StatsLateBumpsNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/LateBumpsStatsLine" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
stats_property = "bumps_late"

[node name="PerfectBumpsStatsLine" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/PerfectBumpsStatsLine" instance=ExtResource("5_00c1i")]
layout_mode = 2
text = "Perfect Bumps"

[node name="StatsPerfectBumpsNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/PerfectBumpsStatsLine" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
stats_property = "bumps_perfect"

[node name="BallBouncesStatsLine" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/BallBouncesStatsLine" instance=ExtResource("5_00c1i")]
layout_mode = 2
text = "Ball Bounces"

[node name="StatsBouncesNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/BallBouncesStatsLine" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
stats_property = "bounces"

[node name="Score" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/Score" instance=ExtResource("5_00c1i")]
layout_mode = 2
text = "Score"

[node name="StatsScoreNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/Score" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
stats_property = "score"

[node name="TotalScore" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer"]
layout_mode = 2

[node name="StatsTitle" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TotalScore" instance=ExtResource("5_00c1i")]
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "Total Score"

[node name="StatsTotalScoreNumber" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TotalScore" instance=ExtResource("5_it5o2")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 120
stats_property = "total_score"

[node name="Controls" type="MarginContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 50

[node name="NextButton" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/Controls" instance=ExtResource("7_pluhc")]
unique_name_in_owner = true
layout_mode = 2

[node name="Effects" type="Node2D" parent="."]

[node name="ShakeEffect" parent="Effects" node_paths=PackedStringArray("target") instance=ExtResource("7_f17px")]
target = NodePath("../../CanvasLayer")
frequency = 300.0
noise = SubResource("FastNoiseLite_knwrq")

[node name="ShakeEffectBig" parent="Effects" node_paths=PackedStringArray("target") instance=ExtResource("7_f17px")]
target = NodePath("../../CanvasLayer")
duration = 1.0
frequency = 400.0
noise = SubResource("FastNoiseLite_ropkh")

[node name="ShakeNumberSoundEffect" parent="Effects" instance=ExtResource("8_ms0k7")]
stream = ExtResource("10_re2mn")
random_pitch = true

[node name="ShakeLabelSoundEffect" parent="Effects" instance=ExtResource("8_ms0k7")]
stream = ExtResource("9_7mx6g")
random_pitch = true

[connection signal="stats_label_animated" from="." to="Effects/ShakeLabelSoundEffect" method="perform"]
[connection signal="stats_number_animated" from="." to="Effects/ShakeEffect" method="perform"]
[connection signal="stats_number_animated" from="." to="Effects/ShakeNumberSoundEffect" method="perform"]
[connection signal="animation_finished" from="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TotalScore/StatsTotalScoreNumber" to="Effects/ShakeEffectBig" method="perform"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/Controls/NextButton" to="." method="next"]

[editable path="CanvasLayer/UI/MarginContainer/VBoxContainer/Body/VBoxContainer/TimeStatsLine/StatsTimeNumber"]
